<resources>
    <string name="app_name">魔法钱包</string>
    <string name="fail_message">获取数据异常</string>
    <string name="loan_hot">热</string>
    <string name="loan_name">名称</string>
    <string name="loan_nature1">放贷快</string>
    <string name="loan_nature2">额度不限</string>
    <string name="loan_low_cost">最低费率</string>
    <string name="loan_low_cost_value">0.1%</string>
    <string name="loan_man_amount">541700人</string>
    <string name="loan_man_amount_apply">已申请</string>
    <string name="loan_highest">最高额</string>
    <string name="loan_highest_value">20.0</string>
    <string name="loan_highest_value_unit">万</string>
    <string name="click_reload">点击重新加载</string>
    <string name="loan">贷款</string>
    <string name="loan_default_sorting">默认排序</string>
    <string name="loan_lowest_rate">利率最低</string>
    <string name="loan_highest_quota">最高额度</string>
    <string name="loan_filter">筛选</string>
    <string name="loan_detail_introduct">百度官方自营现金贷</string>
    <string name="loan_detail_Limit_range">贷款金额</string>
    <string name="loan_detail_term_range">还款期限</string>
    <string name="loan_detail_range_value">1.50</string>
    <string name="loan_detail_range_value_unit">%</string>
    <string name="loan_detail_range_reference">参考月利率</string>
    <string name="loan_detail_repayment_value">987</string>
    <string name="loan_detail_repayment_value_unit">元</string>
    <string name="loan_detail_repayment_month">每月还款（元）</string>
    <string name="loan_detail_lending_time_unit">秒</string>
    <string name="loan_detail_lending_time">10</string>
    <string name="loan_detail_lending_time_fastest">最快放款时间</string>
    <string name="loan_detail_apply_process">申请流程</string>
    <string name="loan_detail_apply_condition">申请条件</string>
    <string name="loan_detail_apply_lending">申请放款</string>
    <string name="loan_detail_lending_month_unit">月</string>
    <string name="loan_detail_apply_need_data">所需资料</string>
    <string name="hot_loan">热门贷款</string>
    <string name="more">更多</string>
    <string name="hot_loan_message">据统计，申请三家以上的用户，99%都会拿到借款！</string>
    <string name="hot_loan_card">热门信用卡</string>
    <string name="credit">信用卡</string>
    <string name="debit">储蓄卡</string>
    <string name="cashout_money">套现金额</string>
    <string name="select_card">选择银行卡</string>
    <string name="use_new_card_cashout">使用新卡套现</string>
    <string name="no_card_cashout_tip">银行级信息安全防护，不以任何形式泄露用户信息，严格保护用户隐私数据</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
</resources>
