<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/loan_default_margin"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="@dimen/loan_default_padding_big">

    <ImageView
        android:id="@+id/iv_icon_loan"
        android:layout_width="@dimen/loan_icon_normal"
        android:layout_height="@dimen/loan_icon_normal" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/loan_default_margin"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/loan_default_padding">

            <TextView
                android:id="@+id/tv_loan_hot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_loan_normal"
                android:text="@string/loan_hot"
                android:textColor="@color/loan_normal"
                android:textSize="@dimen/loan_nature" />

            <TextView
                android:id="@+id/tv_loan_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/loan_default_margin_small"
                android:ellipsize="end"
                android:maxEms="5"
                android:maxLines="1"
                android:text="@string/loan_name"
                android:textColor="@color/loan_name"
                android:textSize="@dimen/loan_name" />

            <TextView
                android:id="@+id/tv_loan_nature1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/loan_default_margin"
                android:background="@drawable/shape_loan_normal"
                android:text="@string/loan_nature1"
                android:textColor="@color/loan_normal"
                android:textSize="@dimen/loan_nature" />

            <TextView
                android:id="@+id/tv_loan_hot_nature2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/loan_default_margin_small"
                android:background="@drawable/shape_loan_normal"
                android:text="@string/loan_nature2"
                android:textColor="@color/loan_normal"
                android:textSize="@dimen/loan_nature" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/loan_default_padding">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_low_cost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loan_low_cost" />

                    <TextView
                        android:id="@+id/tv_low_cost_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loan_low_cost_value"
                        android:textSize="@dimen/loan_name" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/loan_default_margin_small"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_man_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loan_man_amount"
                        android:textColor="@color/loan_name"
                        android:textSize="@dimen/loan_name" />

                    <TextView
                        android:id="@+id/tv_man_amount_apply"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loan_man_amount_apply" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_highest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/loan_highest" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/loan_default_margin_small"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_highest_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loan_highest_value"
                        android:textColor="@color/loan_normal"
                        android:textSize="@dimen/loan_name_big" />

                    <TextView
                        android:id="@+id/tv_highest_value_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loan_highest_value_unit" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>